| Bug #78133 | Slave_worker::write_info() incorrect DBUG_ENTER (contribution) | ||
|---|---|---|---|
| Submitted: | 19 Aug 2015 11:47 | Modified: | 18 Mar 2016 0:35 |
| Reporter: | OCA Admin (OCA) | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Replication | Severity: | S3 (Non-critical) |
| Version: | 5.6.26 | OS: | Any |
| Assigned to: | Marc ALFF | CPU Architecture: | Any |
[19 Aug 2015 11:47]
OCA Admin
[19 Aug 2015 11:47]
OCA Admin
Contribution submitted via Github - Slave_worker::write_info() incorrectly had DBUG_ENTER Master_info:: (*) Contribution by Stewart Smith (Github stewart-ibm, mysql-server/pull/25#body-101337961): Under OCA.
Contribution: git_patch_42553946.txt (text/plain), 842 bytes.
[19 Aug 2015 12:15]
MySQL Verification Team
Hello Stewart, Thank you for the report and contribution. Thanks, Umesh
[26 Feb 2016 0:02]
Stewart Smith
over 191 days not merging a trivial and obvious fix? :(
[18 Mar 2016 0:35]
Daniel So
Added the following entry to the MySQL 5.6.30, 5.7.12, and 5.8.0 changelogs: "In Slave_worker::write_info(), DBUG_ENTER() had “Master_info::write_info” as its argument instead of “Slave_worker::write_info”. This fix corrects the argument. Thanks to Stewart Smith for the patch."
