Bug#78133 Slave_worker::write_info() incorrect DBUG_ENTER (contribution)

Fixed macro DBUG_ENTER for Slave_worker::write_info().

Contribution by Steward Smith (OCA).